--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Virtual Network Framework",
   "main": "src/my-module.js",
   "scripts": {
-    "test": "./node_modules/.bin/karma start --single-run",
+    "test": "npm run test-chrome && npm run test-firefox",
+    "test-chrome": "./node_modules/.bin/karma start --single-run --browsers ChromeHeadless",
+    "test-firefox": "./node_modules/.bin/karma start --single-run --browsers ChromeHeadless",
     "codecov": "./node_modules/.bin/codecov"
   },
   "repository": {
