--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "karma-babel-preprocessor": "^8.0.1",
     "karma-commonjs": "^1.0.0",
     "karma-coverage": "^2.0.1",
+    "karma-failed-reporter": "0.0.3",
     "karma-spec-reporter": "0.0.32",
     "qunit": "^2.9.2"
   },
