Improvement: Upgrading to latest libraries

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "virtual-network-framework",
-  "version": "0.1.0",
+  "version": "0.1.6",
   "description": "Virtual Network Framework",
   "main": "src/my-module.js",
   "scripts": {
-    "test": "./node_modules/.bin/karma start --single-run",
-    "codecov": "./node_modules/.bin/codecov"
+    "test": "npx karma start --single-run",
+    "codecov": "npx codecov"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,7 @@
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "codecov": "^3.6.1",
-    "karma": "^4.3.0",
+    "karma": "^6.3.4",
     "karma-babel-preprocessor": "^8.0.1",
     "karma-commonjs": "^1.0.0",
     "karma-coverage": "^2.0.1",
