--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/my-module.js",
   "scripts": {
     "test": "npx karma start --single-run",
-    "codecov": "npx codecov"
+    "codecov": "npx codecov",
+    "start": "npx http-server"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "codecov": "^3.6.1",
+    "http-server": "^13.0.0",
     "karma": "^6.3.4",
     "karma-babel-preprocessor": "^8.0.1",
     "karma-commonjs": "^1.0.0",
